# mdnewline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/mdnewline/: processor.py
tests/: test_mdnewline.py
