[project]
name = "mdnewline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Russell Poldrack", email = "poldrack@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mdnewline = "mdnewline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
